justify center footer

--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
         </div>
     </nav>
     <!-- carousel section -->
-    <div class="flex items-center justify-center lg:mt-[2rem] min-h-[24rem] bg-gray-100 max-md:-mt-[2.5rem]">
+    <div class="flex items-center justify-center lg:mt-[2rem] min-h-[24rem] bg-gray-100 max-md:-mt-[4rem]">
         <div class="h-[34rem] w-screen max-md:h-[12rem]">
             <div id="carousel" class="relative h-full w-full overflow-hidden">
                 <!-- First Slide -->
@@ -365,7 +365,7 @@
         </div>
     </div>
     <div class="lg:hidden block ">
-        <div class="p-3 bg-white mx-3 rounded-lg max-md:-mt-14 ">
+        <div class="p-3 bg-white mx-3 rounded-lg max-md:-mt-16 ">
             <p class="text-lg font-[poppins] font-medium">Lorem <span class="text-[#7200FF]">Ipsum </span>amid</p>
             <p class="text-xs font-">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod</p>
         </div>
@@ -1363,12 +1363,12 @@
         </div>
     </div>
     <!-- last footer -->
-    <div class="bg-[#5B03C8]  flex max-md:flex-wrap max-md:justify-center justify-around  p-3 list-none ">
-        <div class="max-md:hidden block">
+    <div class="bg-[#5B03C8] max-md:flex-col max-md:items-center flex max-md:justify-center justify-around  p-3 list-none ">
+        <div class="max-md:hidden block mt-6">
             <li class="text-white  text-xs leading-3 font-[poppins] font-semibold">Lms</li>
         </div>
         <div>
-            <li class="text-white  text-xs leading-3 font-[poppins]">© 2024 All copyrights reserved.</li>
+            <li class="text-white  text-xs leading-3 font-[poppins] mt-6">© 2024 All copyrights reserved.</li>
         </div>
         <div class="flex gap-3 text-white my-4">
             <div class="w-6 h-6 border border-white rounded-[100%]  flex justify-center items-center"><i
