--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
 
         .flip-card:hover .flip-card-inner {
             transform: rotateY(-180deg);
+
         }
 
         .flip-card-front,
@@ -385,7 +386,7 @@
                 <li class="card-item flex-none max-w-fit ">
                     <a href="#" class="">
                         <div class="border border-black rounded-4xl p-2 hover:bg-[#7200FF] hover:text-[#FFFFFF]">
-                            <p class="text-xs">Frontend-Development</p>
+                            <a href="#" class="text-xs">Frontend-Development</a>
                         </div>
                     </a>
                 </li>
@@ -452,8 +453,8 @@
                 <li class="card-item flex-none w-[90%]  sm:w-[46%] md:w-[30%]">
                     <div class="p-4 bg-[#F1F3F6]">
                         <img src="./assets/Rectangle 32.png" class="w-full rounded-md" alt="Card Image">
-                        <p class="text-lg text-black font-semibold max-md:text-sm font-[poppins] my-2">Introduction of
-                            Frontend-Development</p>
+                        <a href="#" class="text-lg text-black font-semibold max-md:text-sm font-[poppins] my-2">Introduction of
+                            Frontend-Development</a>
                         <div>
                             <div class="flex justify-start gap-4">
                                 <div class="flex justify-around gap-1 my-2">
@@ -847,11 +848,11 @@
            rounded-bl-2xl rounded-se-2xl transform duration-300 ease-in-out 
            hover:bg-white hover:text-[#7200FF] hover:border-[#7200FF]">
         <div class="flex gap-2 items-center">
-            <p class="font-bold font-[poppins] text-sm transition-colors duration-300">See more</p>
+            <a href="#"><p class="font-bold font-[poppins] text-sm transition-colors duration-300">See more</p></a>
             <span class="flex space-x-1 text-xl transition-colors duration-300">
-                <i class="fas fa-angle-right"></i>
-                <i class="fas fa-angle-right"></i>
-                <i class="fas fa-angle-right"></i>
+                <a href="#"><i class="fas fa-angle-right"></i></a>
+                <a href="#"><i class="fas fa-angle-right"></i></a>
+                <a href="#"><i class="fas fa-angle-right"></i></a>
             </span>
         </div>
     </div>
@@ -1301,10 +1302,12 @@
         <div class="lg:hidden block px-16 pt-10 max-md:px-2">
             <div class=" flex justify-around max-md:gap-1">
                 <div class="">
-                    <img class="" src="./assets/logo lms.svg" alt="">
+                    <a href="#">
+                        <img class="" src="./assets/logo lms.svg" alt="">
+                    </a>
                 </div>
                 <div class="text-white">
-                    <p class="font-[poppins]">Visit us<i class="fa-solid fa-up-right-from-square mx-2"></i></p>
+                    <a href="#"><p class="font-[poppins]">Visit us<i class="fa-solid fa-up-right-from-square mx-2"></i></p></a>
                 </div>
             </div>
 
@@ -1316,22 +1319,22 @@
             <div class="flex gap-60 max-md:gap-5">
                 <div class="leading list-none text-start">
                     <li class="text-white  text-sm leading-12 font-[poppins] font-semibold">Certificate issued by </li>
-                    <li class="text-white  text-sm leading-12 font-[poppins]">Udemy</li>
-                    <li class="text-white  text-sm leading-12 font-[poppins]">Udemy</li>
-                    <li class="text-white  text-sm leading-12 font-[poppins]">Udemy</li>
+                    <a href="#"><li class="text-white  text-sm leading-12 font-[poppins]">Udemy</li></a>
+                    <a href="#"><li class="text-white  text-sm leading-12 font-[poppins]">Udemy</li></a>
+                    <a href="#"><li class="text-white  text-sm leading-12 font-[poppins]">Udemy</li></a>
                 </div>
                 <div class="leading list-none ">
                     <li class="text-white  text-sm leading-12 font-[poppins] font-semibold">Front-end Development</li>
-                    <li class="text-white  text-sm leading-12 font-[poppins]">Html Basics</li>
-                    <li class="text-white  text-sm leading-12 font-[poppins]">Css & frameworks</li>
-                    <li class="text-white  text-sm leading-12 font-[poppins]">Javascript</li>
+                    <a href="#"><li class="text-white  text-sm leading-12 font-[poppins]">Html Basics</li></a>
+                    <a href="#"><li class="text-white  text-sm leading-12 font-[poppins]">Css & frameworks</li></a>
+                    <a href="#"><li class="text-white  text-sm leading-12 font-[poppins]">Javascript</li></a>
                 </div>
             </div>
             <div class="leading list-none ">
                 <li class="text-white  text-sm leading-12 font-[poppins] font-semibold">Back-end Development</li>
-                <li class="text-white  text-sm leading-12 font-[poppins]">Html Basics</li>
-                <li class="text-white  text-sm leading-12 font-[poppins]">Css & frameworks</li>
-                <li class="text-white  text-sm leading-12 font-[poppins]">Javascript</li>
+                <a href="#"><li class="text-white  text-sm leading-12 font-[poppins]">Html Basics</li></a>
+                <a href="#"><li class="text-white  text-sm leading-12 font-[poppins]">Css & frameworks</li></a>
+                <a href="#"><li class="text-white  text-sm leading-12 font-[poppins]">Javascript</li></a>
             </div>
         </div>
     </div>
@@ -1342,43 +1345,43 @@
             <div class="flex gap-60 max-md:gap-5">
                 <div class="leading list-none text-start">
                     <li class="text-white  text-sm leading-12 font-[poppins] font-semibold">Certificate issued by </li>
-                    <li class="text-white  text-sm leading-12 font-[poppins]">Udemy</li>
-                    <li class="text-white  text-sm leading-12 font-[poppins]">Udemy</li>
-                    <li class="text-white  text-sm leading-12 font-[poppins]">Udemy</li>
+                    <a href="#"><li class="text-white  text-sm leading-12 font-[poppins]">Udemy</li></a>
+                    <a href="#"><li class="text-white  text-sm leading-12 font-[poppins]">Udemy</li></a>
+                    <a href="#"><li class="text-white  text-sm leading-12 font-[poppins]">Udemy</li></a>
                 </div>
                 <div class="leading list-none ">
                     <li class="text-white  text-sm leading-12 font-[poppins] font-semibold">Front-end Development</li>
-                    <li class="text-white  text-sm leading-12 font-[poppins]">Html Basics</li>
-                    <li class="text-white  text-sm leading-12 font-[poppins]">Css & frameworks</li>
-                    <li class="text-white  text-sm leading-12 font-[poppins]">Javascript</li>
+                    <a href="#"><li class="text-white  text-sm leading-12 font-[poppins]">Html Basics</li></a>
+                    <a href="#"><li class="text-white  text-sm leading-12 font-[poppins]">Css & frameworks</li></a>
+                    <a href="#"><li class="text-white  text-sm leading-12 font-[poppins]">Javascript</li></a>
                 </div>
             </div>
 
             <div class="leading list-none ">
                 <li class="text-white  text-sm leading-12 font-[poppins] font-semibold">Back-end Development</li>
-                <li class="text-white  text-sm leading-12 font-[poppins]">Html Basics</li>
-                <li class="text-white  text-sm leading-12 font-[poppins]">Css & frameworks</li>
-                <li class="text-white  text-sm leading-12 font-[poppins]">Javascript</li>
+                <a href="#"><li class="text-white  text-sm leading-12 font-[poppins]">Html Basics</li></a>
+                <a href="#"><li class="text-white  text-sm leading-12 font-[poppins]">Css & frameworks</li></a>
+                <a href="#"><li class="text-white  text-sm leading-12 font-[poppins]">Javascript</li></a>
             </div>
         </div>
     </div>
     <!-- last footer -->
     <div class="bg-[#5B03C8] max-md:flex-col max-md:items-center flex max-md:justify-center justify-around  p-3 list-none ">
         <div class="max-md:hidden block mt-6">
-            <li class="text-white  text-xs leading-3 font-[poppins] font-semibold">Lms</li>
+            <a href="#"><li class="text-white  text-xs leading-3 font-[poppins] font-semibold">Lms</li></a>
         </div>
         <div>
             <li class="text-white  text-xs leading-3 font-[poppins] mt-6">© 2024 All copyrights reserved.</li>
         </div>
         <div class="flex gap-3 text-white my-4">
-            <div class="w-6 h-6 border border-white rounded-[100%]  flex justify-center items-center"><i
-                    class="fa-brands fa-x-twitter text-xs"></i></div>
-            <div class="w-6 h-6 border border-white rounded-[100%] flex justify-center items-center"><i
-                    class="fa-brands fa-linkedin-in text-xs"></i></div>
-            <div class="w-6 h-6 border border-white rounded-[100%] flex justify-center items-center"><i
-                    class="fa-brands fa-instagram text-xs"></i></div>
-            <div class="w-6 h-6 border border-white rounded-[100%] flex justify-center items-center"><i
-                    class="fa-brands fa-facebook-f text-xs"></i></div>
+            <a href="#"><div class="w-6 h-6 border border-white rounded-[100%]  flex justify-center items-center"><i
+                    class="fa-brands fa-x-twitter text-xs"></i></div></a>
+                    <a href="#"><div class="w-6 h-6 border border-white rounded-[100%] flex justify-center items-center"><i
+                    class="fa-brands fa-linkedin-in text-xs"></i></div></a>
+                    <a href="#"><div class="w-6 h-6 border border-white rounded-[100%] flex justify-center items-center"><i
+                    class="fa-brands fa-instagram text-xs"></i></div></a>
+                    <a href="#"><div class="w-6 h-6 border border-white rounded-[100%] flex justify-center items-center"><i
+                    class="fa-brands fa-facebook-f text-xs"></i></div></a>
 
         </div>
     </div>
