--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
                 <li class="card-item flex-none max-w-fit ">
                     <a href="#" class="">
                         <div class="border border-black rounded-4xl p-2 hover:bg-[#7200FF] hover:text-[#FFFFFF]">
-                            <a href="#" class="text-xs">Frontend-Development</a>
+                            <p href="#" class="text-xs">Frontend-Development</p>
                         </div>
                     </a>
                 </li>
