--- a/index.html
+++ b/index.html
@@ -873,7 +873,7 @@
                             <div class="flip-card-inner">
                                 <!-- Front Face -->
                                 <div class="flip-card-front  p-3">
-                                    <i class="fa-solid fa-quote-left font-[Poppins] text-xl text-purple-600"></i>
+                                    <i class="fa-solid fa-quote-left font-[Poppins] text-xl text-[#7200FF]"></i>
                                     <p class="text-sm font-[poppins]  text-black mt-2 my-2">Lorem ipsum dolor sit amet
                                         consectetur. At donec mollis nulla amet.
                                         Elementum nibh lacus adipiscing integer.</p>
@@ -897,7 +897,7 @@
                                 </div>
                                 <!-- Back Face -->
                                 <div class="flip-card-back flex flex-col bg-white text-white p- rounded-lg">
-                                    <i class="fa-solid fa-quote-left font-[Poppins] text-xl text-purple-600"></i>
+                                    <i class="fa-solid fa-quote-left font-[Poppins] text-xl text-[#7200FF]"></i>
                                     <div class="justify-around p-4">
                                         <div class="">
                                             <img src="./assets/Serious Young Boy with Glasses Cartoon Illustration.jpg"
@@ -926,7 +926,7 @@
                             <div class="flip-card-inner">
                                 <!-- Front Face -->
                                 <div class="flip-card-front  p-3">
-                                    <i class="fa-solid fa-quote-left font-[Poppins] text-xl text-purple-600"></i>
+                                    <i class="fa-solid fa-quote-left font-[Poppins] text-xl text-[#7200FF]"></i>
                                     <p class="text-sm font-[poppins]  text-black mt-2 my-2">Lorem ipsum dolor sit amet
                                         consectetur. At donec mollis nulla amet.
                                         Elementum nibh lacus adipiscing integer.</p>
@@ -950,7 +950,7 @@
                                 </div>
                                 <!-- Back Face -->
                                 <div class="flip-card-back flex flex-col bg-white text-white p- rounded-lg">
-                                    <i class="fa-solid fa-quote-left font-[Poppins] text-xl text-purple-600"></i>
+                                    <i class="fa-solid fa-quote-left font-[Poppins] text-xl text-[#7200FF]"></i>
                                     <div class="justify-around p-4">
                                         <div class="">
                                             <img src="./assets/Serious Young Boy with Glasses Cartoon Illustration.jpg"
@@ -978,7 +978,7 @@
                             <div class="flip-card-inner">
                                 <!-- Front Face -->
                                 <div class="flip-card-front  p-3">
-                                    <i class="fa-solid fa-quote-left font-[Poppins] text-xl text-purple-600"></i>
+                                    <i class="fa-solid fa-quote-left font-[Poppins] text-xl text-[#7200FF]"></i>
                                     <p class="text-sm font-[poppins]  text-black mt-2 my-2">Lorem ipsum dolor sit amet
                                         consectetur. At donec mollis nulla amet.
                                         Elementum nibh lacus adipiscing integer.</p>
@@ -1002,7 +1002,7 @@
                                 </div>
                                 <!-- Back Face -->
                                 <div class="flip-card-back flex flex-col bg-white text-white p- rounded-lg">
-                                    <i class="fa-solid fa-quote-left font-[Poppins] text-xl text-purple-600"></i>
+                                    <i class="fa-solid fa-quote-left font-[Poppins] text-xl text-[#7200FF]"></i>
                                     <div class="justify-around p-4">
                                         <div class="">
                                             <img src="./assets/Serious Young Boy with Glasses Cartoon Illustration.jpg"
@@ -1030,7 +1030,7 @@
                             <div class="flip-card-inner">
                                 <!-- Front Face -->
                                 <div class="flip-card-front  p-3">
-                                    <i class="fa-solid fa-quote-left font-[Poppins] text-xl text-purple-600"></i>
+                                    <i class="fa-solid fa-quote-left font-[Poppins] text-xl text-[#7200FF]"></i>
                                     <p class="text-sm font-[poppins]  text-black mt-2 my-2">Lorem ipsum dolor sit amet
                                         consectetur. At donec mollis nulla amet.
                                         Elementum nibh lacus adipiscing integer.</p>
@@ -1054,7 +1054,7 @@
                                 </div>
                                 <!-- Back Face -->
                                 <div class="flip-card-back flex flex-col bg-white text-white p- rounded-lg">
-                                    <i class="fa-solid fa-quote-left font-[Poppins] text-xl text-purple-600"></i>
+                                    <i class="fa-solid fa-quote-left font-[Poppins] text-xl text-[#7200FF]"></i>
                                     <div class="justify-around p-4">
                                         <div class="">
                                             <img src="./assets/Serious Young Boy with Glasses Cartoon Illustration.jpg"
@@ -1082,7 +1082,7 @@
                             <div class="flip-card-inner">
                                 <!-- Front Face -->
                                 <div class="flip-card-front  p-3">
-                                    <i class="fa-solid fa-quote-left font-[Poppins] text-xl text-purple-600"></i>
+                                    <i class="fa-solid fa-quote-left font-[Poppins] text-xl text-[#7200FF]"></i>
                                     <p class="text-sm font-[poppins]  text-black mt-2 my-2">Lorem ipsum dolor sit amet
                                         consectetur. At donec mollis nulla amet.
                                         Elementum nibh lacus adipiscing integer.</p>
@@ -1106,7 +1106,7 @@
                                 </div>
                                 <!-- Back Face -->
                                 <div class="flip-card-back flex flex-col bg-white text-white p- rounded-lg">
-                                    <i class="fa-solid fa-quote-left font-[Poppins] text-xl text-purple-600"></i>
+                                    <i class="fa-solid fa-quote-left font-[Poppins] text-xl text-[#7200FF]"></i>
                                     <div class="justify-around p-4">
                                         <div class="">
                                             <img src="./assets/Serious Young Boy with Glasses Cartoon Illustration.jpg"
@@ -1134,7 +1134,7 @@
                             <div class="flip-card-inner">
                                 <!-- Front Face -->
                                 <div class="flip-card-front  p-3">
-                                    <i class="fa-solid fa-quote-left font-[Poppins] text-xl text-purple-600"></i>
+                                    <i class="fa-solid fa-quote-left font-[Poppins] text-xl text-[#7200FF]"></i>
                                     <p class="text-sm font-[poppins]  text-black mt-2 my-2">Lorem ipsum dolor sit amet
                                         consectetur. At donec mollis nulla amet.
                                         Elementum nibh lacus adipiscing integer.</p>
@@ -1158,7 +1158,7 @@
                                 </div>
                                 <!-- Back Face -->
                                 <div class="flip-card-back flex flex-col bg-white text-white p- rounded-lg">
-                                    <i class="fa-solid fa-quote-left font-[Poppins] text-xl text-purple-600"></i>
+                                    <i class="fa-solid fa-quote-left font-[Poppins] text-xl text-[#7200FF]"></i>
                                     <div class="justify-around p-4">
                                         <div class="">
                                             <img src="./assets/Serious Young Boy with Glasses Cartoon Illustration.jpg"
@@ -1186,7 +1186,7 @@
                             <div class="flip-card-inner">
                                 <!-- Front Face -->
                                 <div class="flip-card-front  p-3">
-                                    <i class="fa-solid fa-quote-left font-[Poppins] text-xl text-purple-600"></i>
+                                    <i class="fa-solid fa-quote-left font-[Poppins] text-xl text-[#7200FF]"></i>
                                     <p class="text-sm font-[poppins]  text-black mt-2 my-2">Lorem ipsum dolor sit amet
                                         consectetur. At donec mollis nulla amet.
                                         Elementum nibh lacus adipiscing integer.</p>
@@ -1210,7 +1210,7 @@
                                 </div>
                                 <!-- Back Face -->
                                 <div class="flip-card-back flex flex-col bg-white text-white p- rounded-lg">
-                                    <i class="fa-solid fa-quote-left font-[Poppins] text-xl text-purple-600"></i>
+                                    <i class="fa-solid fa-quote-left font-[Poppins] text-xl text-[#7200FF]"></i>
                                     <div class="justify-around p-4">
                                         <div class="">
                                             <img src="./assets/Serious Young Boy with Glasses Cartoon Illustration.jpg"
@@ -1375,13 +1375,13 @@
         </div>
         <div class="flex gap-3 text-white my-4">
             <a href="#"><div class="w-6 h-6 border border-white rounded-[100%]  flex justify-center items-center"><i
-                    class="fa-brands fa-x-twitter text-xs"></i></div></a>
+                    class="fa-brands fa-x-twitter text-white text-xs"></i></div></a>
                     <a href="#"><div class="w-6 h-6 border border-white rounded-[100%] flex justify-center items-center"><i
-                    class="fa-brands fa-linkedin-in text-xs"></i></div></a>
+                    class="fa-brands fa-linkedin-in  text-white text-xs"></i></div></a>
+                    <a href="#"><div class="w-6 h-6  text-white border border-white rounded-[100%] flex justify-center items-center"><i
+                    class="fa-brands fa-instagram text-xs  text-white"></i></div></a>
                     <a href="#"><div class="w-6 h-6 border border-white rounded-[100%] flex justify-center items-center"><i
-                    class="fa-brands fa-instagram text-xs"></i></div></a>
-                    <a href="#"><div class="w-6 h-6 border border-white rounded-[100%] flex justify-center items-center"><i
-                    class="fa-brands fa-facebook-f text-xs"></i></div></a>
+                    class="fa-brands fa-facebook-f text-xs  text-white"></i></div></a>
 
         </div>
     </div>
