adding sec.html

--- a/Sec.html
+++ b/Sec.html
@@ -235,7 +235,7 @@
     <div class="pt-12 px-11 list-none">
         <li class="card-item flex-none max-w-fit ">
             <a href="#" class="">
-                <div class="border border-black max-md:px-2 px-3 rounded-4xl p-2 bg-[#7200FF] text-[#FFFFFF]">
+                <div class="border border-black px-3 rounded-4xl p-2 bg-[#7200FF] text-[#FFFFFF]">
                     <p class="text-sm font-semibold">Frontend-Development</p>
                 </div>
             </a>
@@ -663,7 +663,7 @@
             </button>
             <div id="slider1"
                 class="overflow-x-auto scrollbar-thin scrollbar-track-gray-200 scrollbar-thumb-gray-400 scroll-smooth">
-                <ul class="flex gap-0.5">
+                <ul class="flex">
 
                     <!-- Card 1  -->
                     <li class="card-item lg:mx-4 max-md:p-4 max-md:-mx-1 flex-none  w-[90%] sm:w-[30%] md:w-[32%] ">
