--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
                 <!-- Card 1  -->
                 <li class="card-item flex-none w-[90%]  sm:w-[46%] md:w-[30%]">
                     <div class="p-4 bg-[#F1F3F6]">
-                        <img src="./assets/Rectangle 32.png" class="w-full rounded-md" alt="Card Image">
+                        <a href="third.html"><img  src="./assets/Rectangle 32.png" class="w-full rounded-md" alt="Card Image"></a>
                         <a href="#"
                             class="text-lg text-black font-semibold max-md:text-sm font-[poppins] my-2">Introduction of
                             Frontend-Development</a>
