--- a/third.html
+++ b/third.html
@@ -77,7 +77,7 @@
             </div>
             <div class="w-fit mt-5">
                 <div class="flex justify-start  pt-0.5">
-                    <div class="flex gap-2 max-md:gap-[1.3rem] flex-wrap">
+                    <div class="flex gap-2 max-md:gap-[1.2rem] flex-wrap">
                         <button id="FavBtn1"
                             class="group w-10 max-md:hidden  h-10 border border-black rounded-[100%] hover:border hover:border-white bg-white hover:bg-[#7200FF] flex justify-center items-center">
                             <i class="fa-regular fa-heart text-[#7200FF] text-lg group-hover:text-white"></i>
@@ -87,7 +87,7 @@
                             <p class="text-sm text-[#7200FF] font-semibold group-hover:text-white">Enroll now</p>
                         </button>
                         <button id="CartBtn1"
-                            class="group border p-2  border-white max-md:w-[13rem] rounded-lg hover:border-2 hover:border-[#7200FF] hover:bg-white bg-[#7200FF] flex justify-center items-center">
+                            class="group border p-2 pl-2 border-white max-md:w-[13rem] rounded-lg hover:border-2 hover:border-[#7200FF] hover:bg-white bg-[#7200FF] flex justify-center items-center">
                             <i class="fa-solid fa-cart-shopping px-3 text-white text-md group-hover:text-[#7200FF]"></i>
                             <p class="text-white text-sm font-semibold group-hover:text-[#7200FF]">Add to cart</p>
                         </button>
