--- a/third.html
+++ b/third.html
@@ -71,9 +71,7 @@
             </div>
             <div>
                 <p class="text-white text-sm pr-7 max-md:text-sm">Lorem ipsum dolor sit amet consectetur adipisicing
-                    elit. Qui, iste
-                    recusandae repellendus maxime Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus,
-                    possimus.</p>
+                    elit. Qui, iste recusandae repellendus maxime Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, possimus.</p>
             </div>
             <div class="w-fit mt-5">
                 <div class="flex justify-start  pt-0.5">
@@ -87,7 +85,7 @@
                             <p class="text-sm text-[#7200FF] font-semibold group-hover:text-white">Enroll now</p>
                         </button>
                         <button id="CartBtn1"
-                            class="group border p-2 pl-2 border-white max-md:w-[13rem] rounded-lg hover:border-2 hover:border-[#7200FF] hover:bg-white bg-[#7200FF] flex justify-center items-center">
+                            class="group border p-2 pl-2 border-white max-md:w-[78%] rounded-lg hover:border-2 hover:border-[#7200FF] hover:bg-white bg-[#7200FF] flex justify-center items-center">
                             <i class="fa-solid fa-cart-shopping px-3 text-white text-md group-hover:text-[#7200FF]"></i>
                             <p class="text-white text-sm font-semibold group-hover:text-[#7200FF]">Add to cart</p>
                         </button>
@@ -234,8 +232,8 @@
         </div>
     </div>
     <div class="px-28  max-md:p-2 lg:px-16">
-        <div class="bg-gray-2 max-md:flex-wrap flex max-md:p-2 p-1 gap-10 rounded-xs">
-            <div class="paragraph pt-10 max-md:px-2 ">
+        <div class="bg-gray-2 max-md:flex-wrap flex max-md:p-2 p-1 gap-10 rounded-xs max-md:justify-center">
+            <div class="paragraph pt-10 max-md:px-2 "> 
                 <p class="text-2xl max-md:text-sm font-semibold">Requi<span class="text-[#7200FF]">rements</span>/
                     Description</p>
                 <ul>
@@ -265,8 +263,8 @@
                 <p class="text-2xl font-semibold"><span class="text-[#7200FF]">"</span>R<span
                         class="text-[#7200FF]">ating </span>Section
                 </p>
-                <div class="flex gap-7 max-md:flex-wrap max-lg:flex-wrap">
-                    <div class="w-60">
+                <div class="flex gap-7 max-md:flex-wrap max-lg:flex-wrap max-md:justify-start">
+                    <div class="w-60 max-md:w-full">
                         <div class="flex my-5">
                             <img class="w-10 h-10 rounded-full"
                                 src="./assets/Serious Young Boy with Glasses Cartoon Illustration.jpg" alt="">
@@ -289,7 +287,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="w-60">
+                    <div class="w-60 max-md:w-full">
                         <div class="flex my-5">
                             <img class="w-10 h-10 rounded-full"
                                 src="./assets/Serious Young Boy with Glasses Cartoon Illustration.jpg" alt="">
@@ -313,8 +311,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="flex gap-7 my-3 max-md:flex-wrap">
-                    <div class="w-60">
+                <div class="flex gap-7 my-3 max-md:flex-wrap max-md:justify-start">
+                    <div class="w-60 max-md:w-full">
                         <div class="flex my-5">
                             <img class="w-10 h-10 rounded-full"
                                 src="./assets/Serious Young Boy with Glasses Cartoon Illustration.jpg" alt="">
@@ -337,7 +335,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="w-60">
+                    <div class="w-60 max-md:w-full">
                         <div class="flex my-5">
                             <img class="w-10 h-10 rounded-full"
                                 src="./assets/Serious Young Boy with Glasses Cartoon Illustration.jpg" alt="">
