--- a/third.html
+++ b/third.html
@@ -73,8 +73,8 @@
                 <p class="text-white text-sm pr-7 max-md:text-sm">Lorem ipsum dolor sit amet consectetur adipisicing
                     elit. Qui, iste recusandae repellendus maxime Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, possimus.</p>
             </div>
-            <div class="w-fit mt-5">
-                <div class="flex justify-start  pt-0.5">
+            <div class="w-fit mt-5 max-md:px-5">
+                <div class="flex justify-start max-md:mx-auto  pt-0.5">
                     <div class="flex gap-2 max-md:gap-[1.2rem] flex-wrap">
                         <button id="FavBtn1"
                             class="group w-10 max-md:hidden  h-10 border border-black rounded-[100%] hover:border hover:border-white bg-white hover:bg-[#7200FF] flex justify-center items-center">
