--- a/third.html
+++ b/third.html
@@ -82,7 +82,7 @@
                         </button>
                         <button id="CartBtn"
                             class="group p-2 max-md:hidden px-3 max-md:w-[16rem] border delay-75 transition-colors ease-in-out border-white rounded-lg hover:border  hover:border-white bg-white hover:bg-[#7200FF] flex justify-center items-center">
-                            <p class="text-sm text-[#7200FF] font-semibold group-hover:text-white">Enroll now</p>
+                            <a href="#"><p class="text-sm text-[#7200FF] font-semibold group-hover:text-white">Enroll now</p></a>
                         </button>
                         <button id="CartBtn1"
                             class="group border p-2 pl-2 border-white max-md:w-[78%] rounded-lg hover:border-2 hover:border-[#7200FF] hover:bg-white bg-[#7200FF] flex justify-center items-center">
@@ -95,7 +95,7 @@
                         </button>
                         <button id="CartBtn"
                             class="group p-2 lg:hidden  w-[100%]  border border-white rounded-lg hover:border-2 hover:border-black bg-white hover:bg-[#7200FF] justify-center items-center">
-                            <p class="text-md text-[#7200FF] font-semibold">Enroll now</p>
+                            <a href="#"><p class="text-md text-[#7200FF] font-semibold">Enroll now</p></a>
                         </button>
                     </div>
                     <!-- Toast container -->
