--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
                 <li class="card-item flex-none w-[90%]  sm:w-[46%] md:w-[30%]">
                     <div class="p-4 bg-[#F1F3F6]">
                         <a href="third.html"><img  src="./assets/Rectangle 32.png" class="w-full rounded-md" alt="Card Image"></a>
-                        <a href="#"
+                        <a href="four.html"
                             class="text-lg text-black font-semibold max-md:text-sm font-[poppins] my-2">Introduction of
                             Frontend-Development</a>
                         <div>
@@ -886,9 +886,9 @@
             <div class="swiper mySwiper">
                 <div class="swiper-wrapper">
                     <!-- Card 1 -->
-                    <div class="swiper-slide">
-                        <div class="flip-card bg-white shadow-lg rounded-2xl w-64 h-72 p-5">
-                            <div class="flip-card-inner">
+                    <div class="swiper-slide ">
+                        <div class="flip-card bg-white shadow-inner drop-shadow-lg shadow-gray-400 rounded-2xl w-64 h-72 p-5">
+                            <div class="flip-card-inner ">
                                 <!-- Front Face -->
                                 <div class="flip-card-front  p-3">
                                     <i class="fa-solid fa-quote-left font-[Poppins] text-xl text-[#7200FF]"></i>
@@ -940,7 +940,7 @@
 
                     <!-- Card 2 -->
                     <div class="swiper-slide">
-                        <div class="flip-card bg-white shadow-lg rounded-2xl w-64 h-72 p-5">
+                        <div class="flip-card bg-white shadow-inner drop-shadow-lg shadow-gray-400 rounded-2xl w-64 h-72 p-5">
                             <div class="flip-card-inner">
                                 <!-- Front Face -->
                                 <div class="flip-card-front  p-3">
@@ -992,7 +992,7 @@
                     </div>
                     <!-- Card 3 -->
                     <div class="swiper-slide">
-                        <div class="flip-card bg-white shadow-lg rounded-2xl w-64 h-72 p-5">
+                        <div class="flip-card bg-white shadow-inner drop-shadow-lg shadow-gray-400 rounded-2xl w-64 h-72 p-5">
                             <div class="flip-card-inner">
                                 <!-- Front Face -->
                                 <div class="flip-card-front  p-3">
@@ -1044,7 +1044,7 @@
                     </div>
                     <!-- Card 4 -->
                     <div class="swiper-slide">
-                        <div class="flip-card bg-white shadow-lg rounded-2xl w-64 h-72 p-5">
+                        <div class="flip-card bg-white shadow-inner drop-shadow-lg shadow-gray-400 rounded-2xl w-64 h-72 p-5">
                             <div class="flip-card-inner">
                                 <!-- Front Face -->
                                 <div class="flip-card-front  p-3">
@@ -1096,7 +1096,7 @@
                     </div>
                     <!-- Card 5 -->
                     <div class="swiper-slide">
-                        <div class="flip-card bg-white shadow-lg rounded-2xl w-64 h-72 p-5">
+                        <div class="flip-card bg-white shadow-inner drop-shadow-lg shadow-gray-400 rounded-2xl w-64 h-72 p-5">
                             <div class="flip-card-inner">
                                 <!-- Front Face -->
                                 <div class="flip-card-front  p-3">
@@ -1148,7 +1148,7 @@
                     </div>
                     <!-- Card 6 -->
                     <div class="swiper-slide">
-                        <div class="flip-card bg-white shadow-lg rounded-2xl w-64 h-72 p-5">
+                        <div class="flip-card bg-white shadow-inner drop-shadow-lg shadow-gray-400 rounded-2xl w-64 h-72 p-5">
                             <div class="flip-card-inner">
                                 <!-- Front Face -->
                                 <div class="flip-card-front  p-3">
@@ -1200,7 +1200,7 @@
                     </div>
                     <!-- Card 7 -->
                     <div class="swiper-slide">
-                        <div class="flip-card bg-white shadow-lg rounded-2xl w-64 h-72 p-5">
+                        <div class="flip-card bg-white  shadow-inner drop-shadow-lg shadow-gray-400 rounded-2xl w-64 h-72 p-5">
                             <div class="flip-card-inner">
                                 <!-- Front Face -->
                                 <div class="flip-card-front  p-3">
