--- a/four.html
+++ b/four.html
@@ -132,8 +132,8 @@
         <hr class="bg-[#7200FF] h-0.5 rounded-3xl mt-1">
 
         <!-- Sections -->
-        <div id="overview" class="section text-[#7200FF] my-7">
-            <p class="text-2xl my-2 font-bold">Introduction of Frontend-Development</p>
+        <div id="overview" class="section text-[#7200FF] my-7 max-md:px-2">
+            <p class="text-2xl max-md:text-lg my-2 font-bold">Introduction of Frontend-Development</p>
             <p class="text-lg ">Online Course Program</p>
             <div class="flex justify-start gap-5 mx-1 my-5">
                 <div class="flex gap-0.5">
@@ -148,7 +148,7 @@
             <p class="text-sm ">Lorem ipsum dolor sit amet. Nam provident provident sit autem perferendis et error.Lorem
                 ipsum dolor sit amet. Nam provident provident sit autem perferendis et errt .
             </p>
-            <p class="text-2xl my-4 font-bold">Description</p>
+            <p class="text-2xl my-4 font-bold max-md:text-lg">Description</p>
             <p class="text-sm my-1">
                 Lorem ipsum dolor sit amet. Nam provident provident sit autem perferendis et error.Lorem ipsum dolor sit
                 amet. Namue provident provident sit autem perferendis et errt .
